# mendidoha

./: .gitignore  README.md
mendidoha_client/: README.md  pubspec.yaml
mendidoha_client/lib/: config.dart  main.backup.dart  main.dart  main_screen.dart  reset_password_screen.dart  sign_in_screen copy.dart  sign_in_screen.dart  sign_up_notification_screen.dart  sign_up_screen.dart  supplier_list_screen.dart  supplier_screen.dart  uuid_manager.dart
mendidoha_client/linux/: CMakeLists.txt  my_application.cc
mendidoha_client/test/: dummy_test.dart  main_test.dart  widget_test.dart
mendidoha_client/web/: index.html  manifest.json
mendidoha_client/windows/: CMakeLists.txt
mendidoha_server/: Cargo.toml  diesel.toml
mendidoha_server/migrations/2024-07-08-024133_create_users/: up.sql
mendidoha_server/migrations/2024-07-15-031536_create_customers/: down.sql  up.sql
mendidoha_server/migrations/2024-07-15-031546_create_goods/: down.sql  up.sql
mendidoha_server/migrations/2024-07-15-031553_create_services/: down.sql  up.sql
mendidoha_server/migrations/2024-07-15-031554_create_suppliers/: down.sql  up.sql
mendidoha_server/migrations/2024-07-15-034318_create_sales_orders/: down.sql
mendidoha_server/migrations/2024-07-15-034340_create_sales_order_details/: down.sql
mendidoha_server/migrations/2024-07-15-034348_create_purchase_orders/: down.sql  up.sql
mendidoha_server/migrations/2024-07-15-034406_create_purchase_order_details/: down.sql  up.sql
mendidoha_server/migrations/2024-07-17-033140_create_sessions/: down.sql  up.sql
mendidoha_server/src/: lib.rs  main copy 2.rs  main copy 3.rs  main copy.rs  main.rs  schema.rs  util.rs
mendidoha_server/src/db/: goods.rs  mod.rs  models.rs  schema.rs  sessions.rs  supplier.rs  user.rs
mendidoha_server/src/handlers/: good_handler.rs  mod.rs  supplier_handler.rs  user_handler.rs
mendidoha_server/src/middlewares/: validation.rs
mendidoha_server/src/models/: good.rs  mod.rs  session.rs  supplier.rs  user.rs
mendidoha_server/src/tests/: tests.rs
mendidoha_server/tests/: good_handler_tests.rs  supplier_handler_tests.rs  tests.rs  user_handler_tests.rs
(+18 files in other folders)
