[package]
name = "mendidoha_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.1", features = ["chrono", "postgres"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
md5 = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"

[lib]
name = "mendidoha_server"
path = "src/lib.rs"
