[package]
name = "mendidoha_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.1", features = ["chrono", "postgres"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.3"
lazy_static = "1.5.0"
log = "0.4.22"
md5 = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4"] }

[lib]
name = "mendidoha_server"
path = "src/lib.rs"
